@@ -328,7 +328,7 @@ sub initialize( $ ) {
 		    TC_SCRIPT => '',
 		    EXPORT => 0,
 		    UNTRACKED => 0,
-		    VERSION => "4.4.2.3",
+		    VERSION => "4.4.2.4",
 		    CAPVERSION => 40402 ,
 		  );
 
