@@ -22,5 +22,14 @@
 
     Corrected in Shorewall 4.4.2.3.
 
+4)  Nested zones where the parent zone is defined by a wildcard in
+    /etc/shorewall/interfaces (interface names ends in +), don't always
+    work correctly.
 
+    Corrected in Shorewall 4.4.2.3.
+
+5)  Global IP configuration variables are not being set in IPv6
+    configurations. This could cause 'shorewall6 start' to fail.
+
+    Corrected in Shorewall 4.4.2.4.
 
